--- a/testx.html
+++ b/testx.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>TESTX</title>
 <meta charset="utf-8">
+</html>
 <body>
-<h1>testx</h1>
+<h1>This is a test page</h1>
+<p>I this able to be seen in GitHub then it works</p>
 </body>
+</html>
