--- a/testx.html
+++ b/testx.html
@@ -4,6 +4,6 @@
 </html>
 <body>
 <h1>This is a test page</h1>
-<p>I this able to be seen in GitHub then it works</p>
+<p>Is this able to be seen in GitHub then it works</p>
 </body>
 </html>
